# CrushIt

./: .gitignore
plugins/CrushIt/: CMakeLists.txt  README.md  status.json
plugins/CrushIt/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/CrushIt/Design/: v1-style-guide.md  v1-test.html  v1-ui-spec.md  v2-test.html  v2-ui-spec.md  v3-test.html  v4-test.html
plugins/CrushIt/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/CrushIt/Source/ui/public/: index.html
plugins/CrushIt/Source/ui/public/js/: index.js
